// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterTransactions should open dropdown list with all transaction types 1`] = `
<div>
  <div
    data-testid="FilterTransactions"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <button
          class="flex items-center py-2 font-semibold rounded focus:outline-none space-x-2 text-theme-secondary-500"
          data-testid="CollapseToggleButton"
        >
          <span>
            <span
              class="text-theme-secondary-500 dark:text-theme-secondary-600"
            >
              Type
              :
               
            </span>
            <span
              class="text-theme-secondary-700 dark:text-theme-secondary-200"
            >
              All
            </span>
          </span>
          <span
            class="CollapseToggleButton__ToggleIcon-sc-1wkp6k4-0 dRgKUd"
          >
            <div
              class="sc-bdvvtL Cfvxc p-1"
              height="10"
              width="10"
            >
              <svg>
                chevron-down-small.svg
              </svg>
            </div>
          </span>
        </button>
      </span>
      <div
        class="Dropdown__Wrapper-sc-4ty2ol-0 ihNlLq opacity-0 mt-3 py-3 absolute z-10 bg-theme-background rounded-xl shadow-xl w-80 max-h-128 overflow-y-auto"
        data-testid="dropdown__content"
        style="opacity: 1; height: -30px; overflow-y: scroll;"
      >
        <div
          class="pt-5 pb-1"
        >
          <div
            class="mt-4 first:mt-0"
          >
            <ul>
              <ul
                data-testid="dropdown__options"
              >
                <li
                  class="sc-gsDKAQ bwZfGu group"
                  data-testid="dropdown__option--all-0"
                  tabindex="0"
                >
                  <span>
                    All
                  </span>
                </li>
              </ul>
            </ul>
          </div>
          <div
            class="mt-4 first:mt-0"
          >
            <div
              class="mx-8 -my-2"
            >
              <div
                class="Divider-sc-17ehhxk-0 hoeInf border-theme-secondary-300 dark:border-theme-secondary-600"
                type="horizontal"
              />
            </div>
            <ul>
              <li
                class="block px-8 text-xs font-bold text-left uppercase whitespace-nowrap text-theme-secondary-500 dark:text-theme-secondary-600"
              >
                CORE
              </li>
              <ul
                data-testid="dropdown__options"
              >
                <li
                  class="sc-gsDKAQ bwZfGu group"
                  data-testid="dropdown__option--core-0"
                  tabindex="0"
                >
                  <span>
                    Delegate Registration
                  </span>
                </li>
                <li
                  class="sc-gsDKAQ bwZfGu group"
                  data-testid="dropdown__option--core-1"
                  tabindex="0"
                >
                  <span>
                    Delegate Resignation
                  </span>
                </li>
                <li
                  class="sc-gsDKAQ bwZfGu group"
                  data-testid="dropdown__option--core-2"
                  tabindex="0"
                >
                  <span>
                    Timelock Claim
                  </span>
                </li>
                <li
                  class="sc-gsDKAQ bwZfGu group"
                  data-testid="dropdown__option--core-3"
                  tabindex="0"
                >
                  <span>
                    Timelock
                  </span>
                </li>
                <li
                  class="sc-gsDKAQ bwZfGu group"
                  data-testid="dropdown__option--core-4"
                  tabindex="0"
                >
                  <span>
                    Timelock Refund
                  </span>
                </li>
                <li
                  class="sc-gsDKAQ bwZfGu group"
                  data-testid="dropdown__option--core-5"
                  tabindex="0"
                >
                  <span>
                    IPFS
                  </span>
                </li>
                <li
                  class="sc-gsDKAQ bwZfGu group"
                  data-testid="dropdown__option--core-6"
                  tabindex="0"
                >
                  <span>
                    Multipayment
                  </span>
                </li>
                <li
                  class="sc-gsDKAQ bwZfGu group"
                  data-testid="dropdown__option--core-7"
                  tabindex="0"
                >
                  <span>
                    Multisignature
                  </span>
                </li>
                <li
                  class="sc-gsDKAQ bwZfGu group"
                  data-testid="dropdown__option--core-8"
                  tabindex="0"
                >
                  <span>
                    Second Signature
                  </span>
                </li>
                <li
                  class="sc-gsDKAQ bwZfGu group"
                  data-testid="dropdown__option--core-9"
                  tabindex="0"
                >
                  <span>
                    Transfer
                  </span>
                </li>
                <li
                  class="sc-gsDKAQ bwZfGu group"
                  data-testid="dropdown__option--core-10"
                  tabindex="0"
                >
                  <span>
                    Vote
                  </span>
                </li>
              </ul>
            </ul>
          </div>
          <div
            class="mt-4 first:mt-0"
          >
            <div
              class="mx-8 -my-2"
            >
              <div
                class="Divider-sc-17ehhxk-0 hoeInf border-theme-secondary-300 dark:border-theme-secondary-600"
                type="horizontal"
              />
            </div>
            <ul>
              <ul
                data-testid="dropdown__options"
              >
                <li
                  class="sc-gsDKAQ bwZfGu group"
                  data-testid="dropdown__option--magistrate-0"
                  tabindex="0"
                >
                  <span>
                    Magistrate
                  </span>
                </li>
              </ul>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FilterTransactions should render 1`] = `
<div>
  <div
    data-testid="FilterTransactions"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <button
          class="flex items-center py-2 font-semibold rounded focus:outline-none space-x-2 text-theme-secondary-500"
          data-testid="CollapseToggleButton"
        >
          <span>
            <span
              class="text-theme-secondary-500 dark:text-theme-secondary-600"
            >
              Type
              :
               
            </span>
            <span
              class="text-theme-secondary-700 dark:text-theme-secondary-200"
            >
              All
            </span>
          </span>
          <span
            class="CollapseToggleButton__ToggleIcon-sc-1wkp6k4-0 hkBhyg"
          >
            <div
              class="sc-bdvvtL Cfvxc p-1"
              height="10"
              width="10"
            >
              <svg>
                chevron-down-small.svg
              </svg>
            </div>
          </span>
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`FilterTransactions should render with default selected option 1`] = `
<div>
  <div
    data-testid="FilterTransactions"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <button
          class="flex items-center py-2 font-semibold rounded focus:outline-none space-x-2 text-theme-secondary-500"
          data-testid="CollapseToggleButton"
        >
          <span>
            <span
              class="text-theme-secondary-500 dark:text-theme-secondary-600"
            >
              Type
              :
               
            </span>
            <span
              class="text-theme-secondary-700 dark:text-theme-secondary-200"
            >
              All
            </span>
          </span>
          <span
            class="CollapseToggleButton__ToggleIcon-sc-1wkp6k4-0 hkBhyg"
          >
            <div
              class="sc-bdvvtL Cfvxc p-1"
              height="10"
              width="10"
            >
              <svg>
                chevron-down-small.svg
              </svg>
            </div>
          </span>
        </button>
      </span>
    </div>
  </div>
</div>
`;
